# ffxi-helper-service

./: .gitignore  CHAT_MONITORING.md  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  ELITE_API_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  build.bat  run.bat  start.ps1  vcpkg-configuration.json
includes/Player/: ChatLogProperty.h  ChatMessage.h  EliteAPI.h  Player.h  PlayerName.h  PlayerNameProperty.h  PlayerStats.h  TacticalPoints.h  TacticalPointsProperty.h
includes/helpers/: api_client_example.h  chatlogmonitor.h  common.h  http.h  http_example.h  logger.h  memory.h
libs/elite/: DECOMPILATION_SUMMARY.md  DECOMPILED_API.md  DOCUMENTATION_STRUCTURE.md  EliteAPI.dll.README.md  EliteMMO.API.dll.README.md  README.md  extract_detailed_api.ps1
src/: FFXIHelperService.cpp
src/Player/: ChatLogProperty.cpp  EliteAPI.cpp  Player.cpp  PlayerName.cpp  PlayerNameProperty.cpp  TacticalPoints.cpp  TacticalPointsProperty.cpp
src/helpers/: chatlogmonitor.cpp  http.cpp  logger.cpp  memory.cpp
